# aicodeprep-gui

./: .aicodeprep  .aicodeprep-gui  .aigui  .clinerules  .gitignore  CHANGELOG.md  DOCS.html  DOCS.md  INSTALLER_Linux.sh  INSTALLER_MacOS.sh  INSTALLER_windows.bat  INSTRUCTIONS.md  LICENSE  PRIVACY.md  README-old1.md  README.md  README2.md  SUSTAINABLE-LICENSE  TODO.md  Z.md  automator_script.sh  c-refactor.md  checkbox_generator.py  create_checkbox_images.py  debug_gui.py  dev-requirements.txt  f-refactor.md  fullcode.txt  github-sponsor-verification-plan.md  pyproject.toml  pyproject0.toml  pyside6_checkbox_tree_docs.md  pyside6_treewidget_styling.md  qt_checkbox_tree_docs.md  requirements.txt  scan_apache_log.py  t.iss  test_checkbox.py  test_presets_debug.py  test_refactor.py  (+4 more)
.github/: FUNDING.yml
AICodePrepGUI.workflow/Contents/: document.wflow
aicodeprep_gui/: __init__.py  apptheme.py  diagrams.py  file_processor.py  gui.py  help.py  linux_installer.py  macos_installer.py  main.py  smart_logic.py  update_checker.py  windows_registry.py
aicodeprep_gui/data/: default_config.toml
aicodeprep_gui/data/AICodePrep.workflow/Contents/: Info.plist  document.wflow
aicodeprep_gui/gui/: __init__.py  main_window.py
aicodeprep_gui/gui/components/: __init__.py  dialogs.py  installer_dialogs.py  layouts.py  multi_state_level_delegate.py  preset_buttons.py  tree_widget.py
aicodeprep_gui/gui/handlers/: __init__.py  file_events.py  ui_events.py  update_events.py
aicodeprep_gui/gui/settings/: __init__.py  preferences.py  presets.py  ui_settings.py
aicodeprep_gui/gui/utils/: __init__.py  helpers.py  metrics.py
aicodeprep_gui/pro/: __init__.py  multi_state_level_delegate.py  patches.py  preview_window.py
aicodeprep_gui_c/: apptheme.py  file_processor.py  findermenu-mac.py  findermenu_gui.py  fullcode.txt  gui.py  main.py  regmenu-win.py  regmenu.py  smart_logic.py
aicodeprep_gui_c - Copy/: .aicodeprep  smart_logic.py
aicodeprep_gui_c - Copy/data/: config.md
aicodeprep_gui_c/data/: config.md  default_config.md  default_config.toml  default_config.yaml  default_config_old.yaml  potential_new_config.md
aigui/: __init__.py  apptheme.py  file_processor.py  gui.py  main.py  smart_logic.py
aigui/data/: default_config.toml
build_env/: pyvenv.cfg
build_env/Scripts/: activate  activate.bat
macos-easy-install-dist/: README.txt
macos-easy-install-dist/AICodePrepGUI.app/Contents/Frameworks/: aicodeprep_gui
macos-easy-install-dist/AICodePrepGUI.app/Contents/Frameworks/PyQt5/Qt5/plugins/bearer/: libqgenericbearer.dylib
macos-easy-install-dist/AICodePrepGUI.app/Contents/MacOS/: main
macos-easy-install-dist/AICodePrepGUI.app/Contents/_CodeSignature/: CodeResources
macos-easy-install-dist/AICodePrepGUI.workflow/Contents/: Info.plist
old_random_scripts/: create_checkbox_images.py  debug_gui.py  pyside6_qt_docs.md  regmenu_gui.py  test_checkbox.py  test_presets_debug.py  test_refactor.py
pyside6_docs/: examples_gui.py  level_column_delegate_guide.md  pyside6_checkbox_advanced_patterns.md  pyside6_checkbox_examples.md  pyside6_checkbox_layout_techniques.md  pyside6_custom_multistate_widgets.md  pyside6_force_ui_update.md
