[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigui"
version = "0.9.8"
description = "A smart GUI to select, filter, and concatenate code files for large language model (LLM) and AI analysis."
readme = "README.md"
authors = [{ name = "Tom Brothers", email = "wuu73@yahoo.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: Proprietary",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ai", "code", "preparation", "chatbot"]
dependencies = [
    "PySide6>=6.7",
    "toml",
    "pathspec"
]
requires-python = ">=3.6"

[project.scripts]
aigui = "aigui.main:main"

[project.urls]
Homepage = "https://github.com/detroittommy879/aigui"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
aigui = ["data/default_config.toml"]
