[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigui"
version = "1.0.0"
description = "A smart GUI to select, filter, and concatenate code files for large language model (LLM) and AI analysis."
readme = "README.md"
authors = [{ name = "Tom Brothers", email = "wuu73@yahoo.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: Proprietary",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["ai", "code", "preparation", "chatbot"]
dependencies = [
    "altgraph>=0.17.4",
    "certifi>=2025.4.26",
    "charset-normalizer>=3.4.1",
    "idna>=3.10",
    "packaging>=25.0",
    "pefile>=2023.2.7",
    "pyinstaller>=6.13.0",
    "pyinstaller-hooks-contrib>=2025.3",
    "pyperclip>=1.8.2",
    "PySide6>=6.8.1",
    "PySide6_Addons>=6.8.1",
    "PySide6_Essentials>=6.8.1",
    "pywin32-ctypes>=0.2.3",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "shiboken6>=6.8.1",
    "urllib3>=2.4.0",
    "toml",
    "pathspec"
]
requires-python = ">=3.6"

[project.scripts]
aigui = "aigui.main:main"

[project.urls]
Homepage = "https://github.com/detroittommy879/aigui"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
aigui = ["data/default_config.toml", "images/*.png"]
